--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,137 @@
+absl-py==2.1.0
+addict==2.4.0
+aioquic==0.9.25
+albucore==0.0.23
+albumentations==2.0.5
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.8.0
+asgiref==3.7.2
+astor==0.8.1
+attrs==25.1.0
+basicsr==1.4.2
+beautifulsoup4==4.13.3
+blinker==1.9.0
+Brotli==1.1.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.0
+cryptography==42.0.8
+cycler==0.12.1
+Cython==3.0.12
+decorator==5.1.1
+eval_type_backport==0.2.2
+exceptiongroup==1.2.2
+facexlib==0.3.0
+filelock==3.18.0
+filterpy==1.4.5
+fire==0.7.0
+Flask==3.0.3
+fonttools==4.56.0
+fsspec==2025.3.0
+future==1.0.0
+gfpgan==1.3.8
+greenlet==3.0.3
+grpcio==1.71.0
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+imageio==2.37.0
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kaitaistruct==0.10
+kiwisolver==1.4.7
+lazy_loader==0.4
+ldap3==2.9.1
+llvmlite==0.43.0
+lmdb==1.6.2
+lxml==5.3.1
+Markdown==3.7
+MarkupSafe==3.0.2
+matplotlib==3.9.4
 mitmproxy==10.2.4
+mitmproxy-windows==0.5.2
+mitmproxy_rs==0.5.2
+mpmath==1.3.0
+msgpack==1.0.8
+networkx==3.2.1
+numba==0.60.0
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+opt-einsum==3.3.0
+packaging==24.2
+paddleocr==2.10.0
+paddlepaddle==2.6.2
+passlib==1.7.4
+pefile==2023.2.7
+pillow==11.1.0
+platformdirs==4.3.6
 playwright==1.42.0
-torch==2.2.1
-requests
-numpy
-pillow
---find-links https://github.com/shinkuan/Akagi/releases/expanded_assets/v0.1.1-libriichi
-riichi>=0.1.1
-tkhtmlview
-pyinstaller
-
+protobuf==3.20.2
+ProtoNet==0.1
+publicsuffix2==2.20191221
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydivert==2.1.0
+pyee==11.0.1
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
+pylsqpack==0.3.19
+pyOpenSSL==24.0.0
+pyparsing==3.2.1
+pyperclip==1.8.2
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+RapidFuzz==3.12.2
+realesrgan==0.3.0
+requests==2.32.3
+riichi==0.1.1
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+scikit-image==0.24.0
+scipy==1.13.1
+service-identity==24.2.0
+shapely==2.0.7
+simsimd==6.2.1
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+stringzilla==3.12.3
+sympy==1.13.1
+tb-nightly==2.20.0a20250314
+tensorboard-data-server==0.7.2
+termcolor==2.5.0
+tifffile==2024.8.30
+tkhtmlview==0.3.1
+tomli==2.2.1
+torch==2.2.0
+torchaudio==2.2.0
+torchvision==0.17.0
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+urwid-mitmproxy==2.1.2.1
+Werkzeug==3.1.3
+wsproto==1.2.0
+yapf==0.43.0
+zipp==3.21.0
+zstandard==0.22.0
